--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2882,3 +2882,49 @@ body.page-front .content-block--main-catalog .btn.btn-primary.btn-lg {
 .row > .empty {
     padding: 0 15px;
 }
+
+.features {
+    background: url(../images/smiling_doctor.png) center;
+    background-repeat: no-repeat;
+}
+
+.features:after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
+.feature {
+    text-align: right;
+}
+
+.feature:after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
+.feature__title {
+    font-size: 24px;
+    color: #15C9CD;
+    text-transform: uppercase;
+}
+
+.feature__text {
+    width: 50%;
+    margin-top: 10px;
+}
+
+.feature__image {
+    width: 50%;
+    float: right;
+}
+
+.feature--right {
+    float: right;
+}
+
+.feature--right .feature__title,
+.feature--right .feature__text {
+    text-align: left;
+}
