--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3101,3 +3101,47 @@ small, .small {
     padding-top: 0 !important;
     margin-top: 40px;
 }
+
+.important-notice {
+    margin: 40px 0 35px 0;
+    padding: 25px 25px 25px 150px;
+    border: 2px solid #D85A4E;
+    position: relative;
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+}
+
+.important-notice:before {
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    background: #D85A4E;
+    color: #fff;
+    content: "i";
+    position: absolute;
+    left: 25px;
+    top: 25px;
+    display: block;
+    text-align: center;
+    font-size: 80px;
+    line-height: 100px;
+}
+
+.important-notice__title {
+    background: #fff;
+    text-transform: uppercase;
+    position: absolute;
+    left: 20px;
+    top: -1.1em;
+    padding: 0 5px;
+    color: #D85A4E;
+}
+
+.important-notice__text {
+    padding-right: 25px;
+}
+
+.important-notice__image img {
+    max-width: none;
+}
