--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3266,16 +3266,20 @@ small, .small {
     text-decoration: none !important;
 }
 
-.catalog-item img {
+.catalog-item__image {
+    text-align: center;
+}
+
+.catalog-item__image img {
     max-width: 100%;
 }
 
-.catalog-item__footer {
+.catalog-item__info {
     background: #15C9CD;
     margin: 0 10px -50px;
     z-index: 99;
     position: relative;
-    padding: 10px 20px;
+    padding: 10px 20px 15px;
     background: linear-gradient(180deg, #05B5B9 0%, #15C9CD 100%);
     box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.25);
     color: #fff;
@@ -3287,8 +3291,43 @@ small, .small {
 }
 
 .catalog-item__announce {
-    font-weight: 600;
-    font-size: 10px;
+    font-size: 11px;
     line-height: 1.3em;
     margin-top: 6px;
+}
+
+.catalog-item__rating {
+    color: #FFC700;
+    float: right;
+}
+
+.catalog-item__prices {
+    margin-top: 15px;
+    text-align: center;
+    position: relative;
+}
+
+.catalog-item__prices .btn {
+    background: #fff;
+    border-color: #fff;
+    color: #007477;
+    border-radius: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.catalog-item__prices .btn:hover,
+.catalog-item__prices .btn:active,
+.catalog-item__prices .btn:focus {
+    background: #FFC700 !important;
+    border-color: #FFC700 !important;
+}
+
+.catalog-item__prices:before {
+    position: absolute;
+    left: 50%;
+    top: 0;
+    bottom: 0;
+    border-left: 1px solid #FFFFFF;
+    content: "";
 }
