верстка индексной статей

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2048,14 +2048,8 @@ footer a:hover, footer a:focus {
 }
 
 .icon--circle {
-    border: 1px solid #70b329;
+    border: 1px solid #565656;
     border-radius: 50%;
-}
-
-header .icon--circle {
-    margin-right: 10px;
-    margin-top: 4px;
-    float: left;
 }
 
 .team__attributes {
@@ -3390,4 +3384,74 @@ small, .small {
 
 .specials-item__buttons .btn .fa {
     margin-left: 10px;
+}
+
+/************/
+
+.articles {
+    margin-top: -30px;
+}
+
+.article-item {
+    padding: 20px 30px;
+    margin-top: 30px;
+    height: 350px;
+    overflow: hidden;
+    position: relative;
+    background-color: #0482AA;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.article-item:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 100px;
+    bottom: 0;
+    background: linear-gradient(180deg, rgba(0, 94, 135, 0) 0%, #005E87 69.3%);
+    z-index: 99;
+}
+
+.article-item__title {
+    margin-top: 0;
+}
+
+.article-item__title a {
+    color: #fff !important;
+    text-decoration: none;
+}
+
+.article-item__params {
+    color: #fff;
+    font-size: 12px;
+    line-height: 1.3em;
+    height: 60px;
+}
+
+.article-item__buttons {
+    margin-top: 20px;
+}
+
+.article-item__buttons .btn {
+    border-radius: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.article-item__buttons .btn .fa {
+    margin-left: 10px;
+}
+
+.article-item__content {
+    position: absolute;
+    top: 240px;
+    padding-right: 20px;
+    z-index: 100;
+    transition: .3s all;
+}
+
+.article-item:hover .article-item__content {
+    top: 180px;
 }
