хедер, футер, главное меню, рефакторинг

--- a/assets/css/colors.less
+++ b/assets/css/colors.less
@@ -49,12 +49,12 @@ a:not(.btn) {
     border-color: @mainColor;
 }
 
-.footer-2 {
+.footer-bottom {
     color: @mainColor;
 }
 
-.footer-2 a,
-.footer-2 a:hover {
+.footer-bottom a,
+.footer-bottom a:hover {
     color: #000;
 }
 
@@ -138,12 +138,6 @@ a:hover, a:focus, .breadcrumb a:hover, .spisok li a:hover {
 .owl-dots .owl-dot.active span, 
 .owl-dots .owl-dot:hover span {
     background: @mainColor;
-}
-
-.editor-content ul li:before,
-.category-list__body ul li:before,
-.category__body ul li:before {
-    background-color: @mainColor;
 }
 
 .category-item__title-link:hover {
