--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3292,7 +3292,7 @@ small, .small {
     position: relative;
     padding: 10px 20px 15px;
     background: linear-gradient(180deg, #05B5B9 0%, #15C9CD 100%);
-    box-shadow: -4px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.25);
     color: #fff;
 }
 
